# letclone

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: tests.rs
tests/ui/: fail_binary_expr.rs  fail_empty_input.rs  fail_literal.rs  pass_closure_usage.rs  pass_complex_nested.rs  pass_field_access.rs  pass_method_call.rs  pass_multiple_exprs.rs  pass_mut_modifier.rs  pass_nested_field.rs  pass_nested_method.rs  pass_nested_tuple.rs  pass_simple_path.rs  pass_tuple_index.rs  pass_tuple_index_mut.rs
